--- a/client/src/Components/Calendar/StreakCalendar.css
+++ b/client/src/Components/Calendar/StreakCalendar.css
@@ -1,5 +1,5 @@
 .streak-day {
-  background-color: #ff9800 !important;
-  color: white !important;
-  border-radius: 50% !important;
+  background-color: #a70ae0;
+  border-radius: 50%;
+  color: #000;
 }
