--- a/client/src/Components/UI/Title.css
+++ b/client/src/Components/UI/Title.css
@@ -28,11 +28,11 @@
     transform: translateX(-1.9rem);
   }
   .navbar {
-    transform: translateX(4.375rem); /* 70px */
+    transform: translateX(0.5rem); /* 70px */
     gap: 3.125rem; /* 50px */
   }
   .signin {
-    transform: translateX(0.5rem);
+    transform: translateX(2rem);
   }
 
   .popupbox {
@@ -49,24 +49,14 @@
     max-height: 8.125rem; /* 130px */
     transform: translateX(-0.8rem);
   }
-  .navbar {
-    transform: translateX(5.5rem); /* 70px */
-    gap: 3.125rem; /* 50px */
-  }
   .signin {
     padding: 0.75rem 1.5625rem; /* 12px 25px */
-    transform: translateX(1rem);
   }
 }
 
 @media (max-width: 75rem) {
   /* 1200px */
-  .signin {
-    transform: translateX(2.5rem);
-  }
-  .navbar {
-    transform: translateX(6.25rem); /* 100px */
-  }
+
   .logo {
     max-height: 7.1875rem; /* 115px */
     transform: translateX(-0rem);
@@ -80,11 +70,9 @@
   }
   .navbar {
     gap: 2.5rem; /* 40px */
-    transform: translateX(6.5625rem); /* 105px */
     font-size: 0.9375rem; /* 15px */
   }
   .signin {
-    transform: translateX(7rem); /* 40px */
     font-size: 0.8125rem; /* 13px */
     padding: 0.5625rem 1.5625rem; /* 9px 25px */
   }
@@ -94,12 +82,7 @@
   /* 1000px */
   .navbar {
     gap: 2.5rem; /* 40px */
-    transform: translateX(7rem); /* 105px */
     font-size: 0.9375rem; /* 15px */
-  }
-  .signin {
-    transform: translateX(4rem); /* 40px */
-    font-size: 0.8125rem; /* 13px */
   }
   .logo {
     transform: translateX(1rem);
@@ -110,17 +93,15 @@
   /* 900px */
   .logo {
     max-height: 6.25rem; /* 100px */
-    transform: translateX(0.8rem);
+    transform: translateX(0rem);
   }
   .navbar {
     gap: 2.5rem; /* 40px */
-    transform: translateX(8rem); /* 120px */
     font-size: 0.875rem; /* 14px */
   }
   .signin {
-    transform: translateX(5.5rem); /* 80px */
-    padding: 0.5625rem 1.5625rem; /* 9px 25px */
     font-size: 0.8125rem; /* 13px */
+    margin-right: 40px;
   }
 }
 
@@ -128,17 +109,16 @@
   /* 800px */
   .logo {
     max-height: 6.25rem; /* 100px */
-    transform: translateX(1.8rem);
+    transform: translateX(-1rem);
   }
   .navbar {
     gap: 2.5rem; /* 40px */
-    transform: translateX(7.5rem); /* 120px */
     font-size: 0.65rem; /* 14px */
   }
   .signin {
-    transform: translateX(7rem); /* 80px */
     padding: 0.3125rem 1.5625rem; /* 5px 25px */
     font-size: 0.7rem; /* 13px */
+    margin-right: 30px;
   }
 }
 
@@ -150,53 +130,50 @@
   }
   .logo {
     max-height: 7rem; /* 40px */
-    transform: translateX(1rem);
+    transform: translateX(-4rem);
   }
   .navbar {
     display: none;
   }
 
   .signin {
-    transform: translateX(-0.5rem);
     padding: 0.4rem 2rem; /* 5px 25px */
     font-size: 0.7rem;
+    transform: translateX(5rem);
     /* 80px */
   }
 }
 
-@media (max-width: 37.5rem) {
-  /* 600px */
+@media (max-width: 35rem) {
+  /* 400px */
   .logo {
-    transform: translateX(1.2rem);
+    transform: translateX(-3rem);
   }
-  .signin {
-    transform: translateX(-0.8rem);
-
-    /* 80px */
-  }
-}
-
-@media (max-width: 31.25rem) {
-  /* 500px */
-
-  .logo {
-    min-width: 7rem;
-    transform: translateX(4rem);
-  }
-  .signin {
-    transform: translateX(4.5rem);
-
-    /* 80px */
+  .title {
+    margin-bottom: 32px;
   }
 }
 
 @media (max-width: 25rem) {
   /* 400px */
   .logo {
-    transform: translateX(5.8rem);
+    transform: translateX(-2.5rem);
   }
   .signin {
-    transform: translateX(5.5rem);
+    transform: translateX(4rem);
+
+    /* 80px */
+  }
+}
+
+@media (max-width: 23rem) {
+  /* 300px */
+  .logo {
+    max-height: 6rem;
+    transform: translateX(-2.5rem);
+  }
+  .signin {
+    transform: translateX(4rem);
 
     /* 80px */
   }
